Improve who's online space portlet style and fix the collapse with agenda timeline (#204)

--- a/platform-ui-skin/src/main/webapp/skin/less/platform/skin/platform.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/skin/platform.less
@@ -95,6 +95,12 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .OfficeRightTDContainer, .SpaceHomePortletsTDContainer {
   width: 285px !important;
   padding-left: 20px;
+
+  #SpaceHomePortletsChildren{
+    #OnlineUsers{
+      margin-bottom: 20px;
+    }
+  }
 }
 
 #header {
